--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="card">
-      <img class="image" id="main-image" src="/images/image-product-desktop.jpg">
+      <img class="image" id="main-image" src="./images/image-product-desktop.jpg">
       <div class="text">
         <p class="class">PERFUME</p>
           <h1 class="product"><strong>Gabrielle Essence Eau De Parfum</strong></h1>
