--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   </head>
   <body>
     <div class="card">
-      <img class="image" id="main-image" src="../images/image-product-desktop.jpg">
+      <img class="image" id="main-image" src="./images/image-product-desktop.jpg">
       <div class="text">
         <p class="class">PERFUME</p>
           <h1 class="product"><strong>Gabrielle Essence Eau De Parfum</strong></h1>
@@ -35,7 +35,7 @@
             <p class="price">$149.99</p><p class="old-price">$169.99</p></div>
 
         <button class="btn">
-          <img src="../images/icon-cart.svg" style="padding-right: 0.5rem">
+          <img src="./images/icon-cart.svg" style="padding-right: 0.5rem">
           Add to Cart
         </button>
       </div>
