--- a/index.html
+++ b/index.html
@@ -21,9 +21,10 @@
       .attribution a { color: hsl(228, 45%, 44%); }
     </style>
   </head>
+
   <body>
     <div class="card">
-      <img class="image" id="main-image" src="./images/image-product-desktop.jpg">
+      <img class="image" id="main-image" src="./images/image-product-desktop.jpg" alt="Chanel Parfum">
       <div class="text">
         <p class="class">PERFUME</p>
           <h1 class="product"><strong>Gabrielle Essence Eau De Parfum</strong></h1>
@@ -32,10 +33,11 @@
           Perfumer-Creator for the House of CHANEL.</p>
           
           <div class="row">
-            <p class="price">$149.99</p><p class="old-price">$169.99</p></div>
+            <em class="price">$149.99</em><p class="old-price">$169.99</p>
+          </div>
 
         <button class="btn">
-          <img src="./images/icon-cart.svg" style="padding-right: 0.5rem">
+          <img src="./images/icon-cart.svg" alt="Shopping Cart" style="padding-right: 0.5rem">
           Add to Cart
         </button>
       </div>
